--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   freezed_annotation: 2.4.4
   json_annotation: ^4.9.0
   equatable: ^2.0.7
+  fl_chart: ^0.68.0
 
 dev_dependencies:
   flutter_test:
